--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "react": "^18",
     "react-dom": "^18",
     "react-media-devices": "^1.1.5",
-    "react-zxing": "^2.0.0"
+    "react-zxing": "^2.0.0",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/seedrandom": "^3.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
