--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "^2.1.1",
+		"dom-to-image": "^2.6.0",
+		"jspdf": "^2.5.1",
 		"next": "14.1.0",
 		"qrcode": "^1.5.3",
 		"react": "^18",
@@ -19,6 +21,7 @@
 		"seedrandom": "^3.0.5"
 	},
 	"devDependencies": {
+		"@types/dom-to-image": "^2.6.7",
 		"@types/node": "^20",
 		"@types/qrcode": "^1.5.5",
 		"@types/react": "^18",
