--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "^2.1.1",
+		"canvas": "^2.11.2",
 		"dom-to-image": "^2.6.0",
 		"jspdf": "^2.5.1",
 		"next": "14.1.0",
