--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "^2.1.1",
-		"@napi-rs/canvas": "^0.1.49",
+		"canvas": "^2.11.2",
 		"dom-to-image": "^2.6.0",
 		"jspdf": "^2.5.1",
 		"next": "14.1.0",
