--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@heroicons/react": "^2.1.1",
 		"canvas": "^2.11.2",
+		"compress-json": "^3.0.0",
 		"dom-to-image": "^2.6.0",
 		"jspdf": "^2.5.1",
 		"next": "14.1.0",
